feat: completed sigin functionality
